...
                profile == null
                    ? ListTile(
                        title: const Text('Login'),
                        leading: const Icon(FontAwesomeIcons.rightToBracket),
                        onTap: () async {
...
                      )
                    : ExpansionTile(
                        title: const Text('User'),
                        leading: const Icon(FontAwesomeIcons.userLarge),
                        children: <ListTile>[
                          ListTile(
                            title: const Text('Profile'),
                            onTap: () {
                              FirebaseAnalytics.instance.logSelectContent(contentType: 'user', itemId: 'profile');
...
                          ),
                          ListTile(
                            title: const Text('Anime List'),
                            onTap: () {
                              FirebaseAnalytics.instance.logSelectContent(contentType: 'user', itemId: 'anime_list');
...
                          ),
                          ListTile(
                            title: const Text('Manga List'),
                            onTap: () {
                              FirebaseAnalytics.instance.logSelectContent(contentType: 'user', itemId: 'manga_list');
...
                      ),
                ExpansionTile(
                  title: const Text('Anime'),
                  leading: const Icon(FontAwesomeIcons.tv),
                  children: <ListTile>[
                    ListTile(
                      title: const Text('Anime Search'),
                      onTap: () async {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'search');
...
                    ),
                    ListTile(
                      title: const Text('Top Anime'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'top');
...
                    ),
                    ListTile(
                      title: const Text('Seasonal Anime'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'seasonal');
...
                    ),
                    ListTile(
                      title: const Text('Genres'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'genres');
...
                    if (remoteConfig.getBool('v4_producers'))
                      ListTile(
                        title: const Text('Studios'),
                        onTap: () {
                          FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'studios');
...
                    if (remoteConfig.getBool('v4_reviews'))
                      ListTile(
                        title: const Text('Reviews'),
                        onTap: () {
                          FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'reviews');
...
                    if (remoteConfig.getBool('v4_recommendations'))
                      ListTile(
                        title: const Text('Recommendations'),
                        onTap: () {
                          FirebaseAnalytics.instance.logSelectContent(contentType: 'anime', itemId: 'recommendations');
...
                ),
                ExpansionTile(
                  title: const Text('Manga'),
                  leading: const Icon(FontAwesomeIcons.book),
                  children: <ListTile>[
                    ListTile(
                      title: const Text('Manga Search'),
                      onTap: () async {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'manga', itemId: 'search');
...
                    ),
                    ListTile(
                      title: const Text('Top Manga'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'manga', itemId: 'top');
...
                    if (remoteConfig.getBool('v4_magazines'))
                      ListTile(
                        title: const Text('Magazines'),
                        onTap: () {
                          FirebaseAnalytics.instance.logSelectContent(contentType: 'manga', itemId: 'magazines');
...
                ),
                ExpansionTile(
                  title: const Text('Industry'),
                  leading: const Icon(FontAwesomeIcons.briefcase),
                  children: <ListTile>[
                    ListTile(
                      title: const Text('News'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'industry', itemId: 'news');
...
                    ),
                    ListTile(
                      title: const Text('Featured Articles'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'industry', itemId: 'articles');
...
                    ),
                    ListTile(
                      title: const Text('People'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'industry', itemId: 'people');
...
                    ),
                    ListTile(
                      title: const Text('Characters'),
                      onTap: () {
                        FirebaseAnalytics.instance.logSelectContent(contentType: 'industry', itemId: 'characters');
...
                if (remoteConfig.getBool('v4_watch'))
                  ExpansionTile(
                    title: const Text('Watch'),
                    leading: const Icon(FontAwesomeIcons.youtube),
                    children: <ListTile>[
                      ListTile(
                        title: const Text('Episode Videos'),
                        onTap: () {
                          FirebaseAnalytics.instance.logSelectContent(contentType: 'watch', itemId: 'episode');
...
                      ),
                      ListTile(
                        title: const Text('Anime Trailers'),
                        onTap: () {
                          FirebaseAnalytics.instance.logSelectContent(contentType: 'watch', itemId: 'promotional');
...
                IconButton(
                  icon: const Icon(FontAwesomeIcons.gear),
                  tooltip: 'Settings',
                  onPressed: () async {
                    FirebaseAnalytics.instance.logEvent(name: 'settings');
...
